--- a/_config.yml
+++ b/_config.yml
@@ -7,15 +7,13 @@ first_name: Xiaoyu Victor
 middle_name: 
 last_name: Wang
 email: xiaoyu.wang@hw.ac.uk
-#contact_note: >
-#  You can even add a little note about which of these is the best way to reach you.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Xiaoyu Victor Wang's academic webpage.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
+keywords: xiaoyu wang, victor wang, xiaoyu wang math, victor wang math, edinburgh, heriot watt, maxwell institute, cambridge, cca, cia, cambridge image analysis, cambridge math, ucla, nyu, nyu cds, nyu courant, ucla math, inverse problems, optimization, optimisation, neural networks 
+
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
