--- a/_config.yml
+++ b/_config.yml
@@ -197,6 +197,12 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+  - _pages/blog.md
+  - _pages/books.md
+  - _pages/repositories.md
+  - _pages/profiles.md
+  - _pages/drop_down.md
+  
 keep_files:
   - CNAME
   - .nojekyll
