--- a/_config.yml
+++ b/_config.yml
@@ -204,6 +204,9 @@ exclude:
   - _pages/books.md
   - _news/announcement_2.md
   - _news/announcement_3.md
+  - _pages/publications.md
+  - _pages/projects.md
+  - _pages/dropdown.md
   
 keep_files:
   - CNAME
